<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity"
        >
        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cost_of_service_parent"
            app:layout_constraintBottom_toBottomOf="@id/cost_of_service_parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service_parent"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service"
                android:hint="Cost of Service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:layout_constraintBottom_toBottomOf="@id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/cost_of_service_parent"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service_parent"
            android:text="How was the service?"
            />

        <RadioGroup
            android:id="@+id/quality_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/excellent_service"
            app:layout_constraintTop_toBottomOf="@id/service_question"
            app:layout_constraintStart_toStartOf="@id/service_question"
            >
            <RadioButton
                android:id="@+id/excellent_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_quality_option_text_excellent"
                />
            <RadioButton
                android:id="@+id/good_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_quality_option_text_good"
                />
            <RadioButton
                android:id="@+id/normal_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_quality_option_text_ok"
                />
        </RadioGroup>
        <ImageView
            android:id="@+id/icon_roundup_switch"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/roundup_switch"
            app:layout_constraintBottom_toBottomOf="@id/roundup_switch"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/roundup_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/quality_of_service"
            app:layout_constraintStart_toEndOf="@id/icon_roundup_switch"
            app:layout_constraintEnd_toEndOf="parent"
            android:text = "Round up the tip?"
            android:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            />
        <Button
            android:id="@+id/calculate_tip_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/roundup_switch"
            app:layout_constraintStart_toStartOf="@id/roundup_switch"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Calculate Tip"
            />
        <TextView
            android:id="@+id/tip_amount"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/calculate_tip_button"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Your tip amount is: $10.00"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
